--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,13 @@
     <groupId>org.testng</groupId>
     <artifactId>testng</artifactId>
     <version>7.5</version>
-   
+</dependency>
+
+<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+<dependency>
+    <groupId>mysql</groupId>
+    <artifactId>mysql-connector-java</artifactId>
+    <version>8.0.28</version>
 </dependency>
   </dependencies>
 </project>
